syntax="proto3";

message SqrtRequest{
	int32 number = 1;
}
message SqrtResponse{
	double square_root=1;
}


service SqrtService {
	// unary
	rpc Sqrt(SqrtRequest) returns(SqrtResponse){}
}